# fc4eosc-recommender

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose-test.yml  fc4eosc_recommenders-0.1.0-py3-none-any.whl  main.py  pyproject.toml  readme.md  requirements.txt  train.ipynb
communities/: rec_data.sql
communities/beopen-results/: optimisation_results.json  results.json
communities/dariah/: csr.npz  items_mapping.parquet  users_mapping.parquet
communities/dariah-results/: optimisation_results.json  results.json
communities/dh-ch-results/: optimisation_results.json  results.json
communities/digital-humanities/: csr.npz  items_mapping.parquet  users_mapping.parquet
communities/digital-humanities-and-cultural-heritage/: im_csr.npz
communities/energy-research/: im_csr.npz
communities/enermaps-results/: optimisation_results.json  results.json
communities/eosc-results/: optimisation_results.json  results.json
communities/transport-research/: csr.npz  im_csr.npz  items_mapping.parquet  users_mapping.parquet
communities/zbmath/: csr.npz  im_csr.npz  items_mapping.parquet  users_mapping.parquet
darelabdb/api_faircore_mabrecs/: __init__.py  api.py  (+2 more)
database/: rec_data.py  rec_data.sql
deployment/api_faircore_mabrecs/: Dockerfile  docker-compose.yml  pyproject.toml
docs/: author_based_recommender.md  category_based_recommender.md  similarity_based_recommender.md
notebooks/: train.ipynb
recommenders/: ease.py
sql/: add_sk_ids.sql  build_extra_indexes.sql  build_recommenders_schema.sql  initialization.sh
(+119 files in other folders)
