[tool.poetry]
name = "fc4eosc"
version = "0.1.0"
description = ""
authors = ["Stavroula Eleftherakis <selefth@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
recpack = "^0.3.6"
bottleneck = "^1.4.0"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.32"
sqlglot = "^25.13.0"
ipywidgets = "^8.1.3"
jupyter = "^1.0.0"
psycopg2 = "^2.9.9"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
